force-app/main/default/objects/Account__x/Account__x.object-meta.xml
<CustomObject>
    <externalDataSource>My_Demo_Org</externalDataSource>
    <externalName>Account</externalName>
    <label>Account</label>
    <pluralLabel>Accounts</pluralLabel>
</CustomObject>