force-app/main/default/objects/Account__x/fields/ChannelProgramLevelName__c.field-meta.xml
<CustomField>
    <fullName>ChannelProgramLevelName__c</fullName>
    <externalDeveloperName>ChannelProgramLevelName</externalDeveloperName>
    <label>Channel Program Level Name</label>
    <length>255</length>
    <readOnlyProxy>true</readOnlyProxy>
    <type>Text</type>
</CustomField>