force-app/main/default/objects/Account__x/fields/ChannelProgramName__c.field-meta.xml
<CustomField>
    <fullName>ChannelProgramName__c</fullName>
    <externalDeveloperName>ChannelProgramName</externalDeveloperName>
    <label>Channel Program Name</label>
    <length>255</length>
    <readOnlyProxy>true</readOnlyProxy>
    <type>Text</type>
</CustomField>