force-app/main/default/objects/Account__x/fields/IsPartner__c.field-meta.xml
<CustomField>
    <fullName>IsPartner__c</fullName>
    <defaultValue>false</defaultValue>
    <externalDeveloperName>IsPartner</externalDeveloperName>
    <label>Partner Account</label>
    <type>Checkbox</type>
</CustomField>