force-app/main/default/objects/Account__x/fields/meerapack_Account_Type_Integration_c__c.field-meta.xml
<CustomField>
    <fullName>meerapack_Account_Type_Integration_c__c</fullName>
    <externalDeveloperName>meerapack__Account_Type_Integration__c</externalDeveloperName>
    <label>Account Type Integration</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>ACCOUNT</fullName>
            </value>
            <value>
                <fullName>SUB ACCOUNT</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>