force-app/main/default/objects/Account__x/fields/meerapack_country_code_c__c.field-meta.xml
<CustomField>
    <fullName>meerapack_country_code_c__c</fullName>
    <externalDeveloperName>meerapack__country_code__c</externalDeveloperName>
    <label>country code</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>IN</fullName>
            </value>
            <value>
                <fullName>US</fullName>
            </value>
            <value>
                <fullName>AUS</fullName>
            </value>
            <value>
                <fullName>PAK</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>