force-app/main/default/objects/Account__x/fields/meerapack_COUNTRY_DESC_c__c.field-meta.xml
<CustomField>
    <fullName>meerapack_COUNTRY_DESC_c__c</fullName>
    <externalDeveloperName>meerapack__COUNTRY_DESC__c</externalDeveloperName>
    <label>COUNTRY DESC</label>
    <length>255</length>
    <type>Text</type>
</CustomField>