force-app/main/default/objects/Account__x/fields/meerapack_Est_Buying_Power_c__c.field-meta.xml
<CustomField>
    <fullName>meerapack_Est_Buying_Power_c__c</fullName>
    <externalDeveloperName>meerapack__Est_Buying_Power__c</externalDeveloperName>
    <label>Est. Buying Power</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>