force-app/main/default/objects/Account__x/fields/meerapack_font_color_fff_c__c.field-meta.xml
<CustomField>
    <fullName>meerapack_font_color_fff_c__c</fullName>
    <externalDeveloperName>meerapack__font_color_fff__c</externalDeveloperName>
    <label>&lt;font color=&quot;#fff&quot;&gt;contact selection</label>
    <length>50</length>
    <type>Text</type>
</CustomField>