force-app/main/default/objects/Account__x/fields/meerapack_font_color_fff_con_c__c.field-meta.xml
<CustomField>
    <fullName>meerapack_font_color_fff_con_c__c</fullName>
    <externalDeveloperName>meerapack__font_color_fff_con__c</externalDeveloperName>
    <label>&lt;font color=&quot;#fff&quot;&gt;</label>
    <length>1300</length>
    <readOnlyProxy>true</readOnlyProxy>
    <type>LongTextArea</type>
</CustomField>