force-app/main/default/objects/Account__x/fields/meerapack_Legacy_ID_c__c.field-meta.xml
<CustomField>
    <fullName>meerapack_Legacy_ID_c__c</fullName>
    <externalDeveloperName>meerapack__Legacy_ID__c</externalDeveloperName>
    <label>Legacy ID</label>
    <length>40</length>
    <type>Text</type>
</CustomField>