force-app/main/default/objects/Account__x/fields/meerapack_NumberofLocations_c__c.field-meta.xml
<CustomField>
    <fullName>meerapack_NumberofLocations_c__c</fullName>
    <externalDeveloperName>meerapack__NumberofLocations__c</externalDeveloperName>
    <label>Number of Locations</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>