force-app/main/default/objects/Account__x/fields/meerapack_Opportunity_Location_c__c.field-meta.xml
<CustomField>
    <fullName>meerapack_Opportunity_Location_c__c</fullName>
    <externalDeveloperName>meerapack__Opportunity_Location__c</externalDeveloperName>
    <label>Opportunity Location</label>
    <length>18</length>
    <type>Text</type>
</CustomField>