force-app/main/default/objects/Account__x/fields/meerapack_SLASerialNumber_c__c.field-meta.xml
<CustomField>
    <fullName>meerapack_SLASerialNumber_c__c</fullName>
    <externalDeveloperName>meerapack__SLASerialNumber__c</externalDeveloperName>
    <label>SLA Serial Number</label>
    <length>10</length>
    <type>Text</type>
</CustomField>