force-app/main/default/objects/Account__x/fields/meerapack_STATUS_c__c.field-meta.xml
<CustomField>
    <fullName>meerapack_STATUS_c__c</fullName>
    <externalDeveloperName>meerapack__STATUS__c</externalDeveloperName>
    <label>STATUS</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>ACTIVE</fullName>
            </value>
            <value>
                <fullName>INACTIVE</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>