force-app/main/default/objects/Account__x/fields/meerapack_Tax_Registration_Number_c__c.field-meta.xml
<CustomField>
    <fullName>meerapack_Tax_Registration_Number_c__c</fullName>
    <externalDeveloperName>meerapack__Tax_Registration_Number__c</externalDeveloperName>
    <label>Tax Registration Number</label>
    <length>100</length>
    <type>Text</type>
</CustomField>