force-app/main/default/objects/Account__x/fields/meerapack_Test_c__c.field-meta.xml
<CustomField>
    <fullName>meerapack_Test_c__c</fullName>
    <externalDeveloperName>meerapack__Test__c</externalDeveloperName>
    <label>Test</label>
    <length>1300</length>
    <readOnlyProxy>true</readOnlyProxy>
    <type>LongTextArea</type>
</CustomField>