force-app/main/default/objects/Account__x/fields/meerapack_Test_external_c__c.field-meta.xml
<CustomField>
    <fullName>meerapack_Test_external_c__c</fullName>
    <externalDeveloperName>meerapack__Test_external__c</externalDeveloperName>
    <label>Test external</label>
    <length>10</length>
    <type>Text</type>
</CustomField>