force-app/main/default/objects/Account__x/fields/meerapack_Testformula_c__c.field-meta.xml
<CustomField>
    <fullName>meerapack_Testformula_c__c</fullName>
    <externalDeveloperName>meerapack__Testformula__c</externalDeveloperName>
    <label>Testformula</label>
    <length>1300</length>
    <readOnlyProxy>true</readOnlyProxy>
    <type>LongTextArea</type>
</CustomField>