force-app/main/default/objects/Account__x/fields/meerapack_Total_Score_c__c.field-meta.xml
<CustomField>
    <fullName>meerapack_Total_Score_c__c</fullName>
    <externalDeveloperName>meerapack__Total_Score__c</externalDeveloperName>
    <label>Total Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>