force-app/main/default/objects/Account__x/fields/meerapack_UpsellOpportunity_c__c.field-meta.xml
<CustomField>
    <fullName>meerapack_UpsellOpportunity_c__c</fullName>
    <externalDeveloperName>meerapack__UpsellOpportunity__c</externalDeveloperName>
    <label>Upsell Opportunity</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Maybe</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>