force-app/main/default/objects/Account__x/fields/meerapack_Which_Address_c__c.field-meta.xml
<CustomField>
    <fullName>meerapack_Which_Address_c__c</fullName>
    <externalDeveloperName>meerapack__Which_Address__c</externalDeveloperName>
    <inlineHelpText>Which address do you want to use to map this Account? The value of Do Not Map will keep this account from being mapped.</inlineHelpText>
    <label>Which Address to Map</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Billing</fullName>
            </value>
            <value>
                <fullName>Shipping</fullName>
            </value>
            <value>
                <fullName>Do Not Map</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>