force-app/main/default/objects/Account__x/fields/zeitzone_BillingTimeZoneId_c__c.field-meta.xml
<CustomField>
    <fullName>zeitzone_BillingTimeZoneId_c__c</fullName>
    <externalDeveloperName>zeitzone__BillingTimeZoneId__c</externalDeveloperName>
    <label>BillingTimeZoneId</label>
    <length>50</length>
    <type>Text</type>
</CustomField>