force-app/main/default/objects/Account__x/fields/zeitzone_ShippingTimeZoneId_c__c.field-meta.xml
<CustomField>
    <fullName>zeitzone_ShippingTimeZoneId_c__c</fullName>
    <externalDeveloperName>zeitzone__ShippingTimeZoneId__c</externalDeveloperName>
    <label>ShippingTimeZoneId</label>
    <length>50</length>
    <type>Text</type>
</CustomField>